Fix account box issue on smaller screens

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -33,6 +33,11 @@ body::-webkit-scrollbar-thumb:hover {
   background: #c84b31;
 }
 
+@media only screen and (max-width: 500px) {
+  body::-webkit-scrollbar {
+    width: 0;
+  }
+}
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -424,9 +429,9 @@ button:hover {
 .top-left {
   position: fixed;
   z-index: 1;
-  margin-left: 10px;
+  width: 0;
   background-color: #2d4263;
-  padding: 10px;
+  padding: 10px 0 0 10px;
 }
 
 .logo-account-container {
@@ -505,7 +510,7 @@ button:hover {
 .logo-hide {
   height: auto;
   position: relative;
-  top: 0;
+  padding: 0;
   animation-name: logo-hide;
   animation-duration: 0.2s;
   animation-fill-mode: forwards;
@@ -691,6 +696,8 @@ button:hover {
   to {
     height: 0;
     opacity: 0;
+    position: absolute;
+    top: -300px;
   }
 }
 .wrapper {
@@ -879,6 +886,11 @@ button:hover {
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+@media only screen and (max-width: 1000px) {
+  .articles-container-inner {
+    width: 100% !important;
   }
 }
 .article-wrapper {
@@ -1159,6 +1171,13 @@ textarea::-webkit-scrollbar-track {
 textarea::-webkit-scrollbar-thumb {
   background: #c84b31;
   border-radius: 10px;
+}
+
+@media only screen and (max-width: 1000px) {
+  .new-article-container, .edit-article-container {
+    width: 90% !important;
+    padding-top: 120px;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
