--- a/src/scss/components/_loading-screen.scss
+++ b/src/scss/components/_loading-screen.scss
@@ -38,7 +38,6 @@
     }
 }
 
-
 .loader {
     border: 16px solid $primaryBeige;
     border-radius: 50%;
@@ -83,6 +82,8 @@
     }
     to {
         height: 0;
-        opacity: 0;
+        opacity: 0;    
+        position: absolute; 
+        top: -300px;
     }
 }
