--- a/src/scss/core/_base.scss
+++ b/src/scss/core/_base.scss
@@ -34,3 +34,8 @@ body::-webkit-scrollbar-thumb:hover {
     background: $orange; 
 }
 
+@media only screen and (max-width: 500px) {
+    body::-webkit-scrollbar {
+        width: 0;
+    }
+  }
