--- a/src/scss/pages/_dashboard.scss
+++ b/src/scss/pages/_dashboard.scss
@@ -95,12 +95,6 @@
 }
 }
 
-// @media only screen and (max-width: 600px) {
-//     body {
-//       background-color: lightblue;
-//     }
-//   }
-
 .overlay {
     @include flex-row(row-reverse, flex-start);
     align-items: center;
@@ -133,11 +127,17 @@ height: 100%;
 
 @keyframes show-articles {
     from {
-      opacity: 0;
-      transform: translateY(15px);
+        opacity: 0;
+        transform: translateY(15px);
     }
     to {
-      opacity: 1;
-      transform: translateY(0);
+        opacity: 1;
+        transform: translateY(0);
     }
-  }
+}
+
+@media only screen and (max-width: 1000px) {
+   .articles-container-inner {
+       width: 100% !important;
+   }
+}
