--- a/src/scss/pages/_update-article.scss
+++ b/src/scss/pages/_update-article.scss
@@ -48,7 +48,6 @@
         }
     }
 
-
 textarea::-webkit-scrollbar {
     width: 15px;
 }
@@ -64,7 +63,9 @@ textarea::-webkit-scrollbar-thumb {
     border-radius: 10px;
 }
 
-// textarea::-webkit-scrollbar-thumb:hover {
-//     background: $orange; 
-// }
-
+@media only screen and (max-width: 1000px) {
+    .new-article-container, .edit-article-container {
+        width: 90% !important;
+        padding-top: 120px;
+    }
+ }
